--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
 				<li><a href="#page-skills">Skills</a></li>
 				<li><a href="#page-education">Ausbildung</a></li>
 				<li><a href="#page-experience">Erfahrung</a></li>
-				<li><a href="http://detlef.hauke.net/">Blog</a></li>
 <!--					<li><a href="#page-portfolio">Portfolio</a></li>    -->
 				<li><a href="#page-contact">Kontakt</a></li>
 				</ul>
@@ -86,13 +85,13 @@
 			
 			<div class="social-icons">
 				<a href="https://twitter.com/detlefhauke" class="btn btn-round btn-clear btn-twitter" target="_blank"><i class="fa fa-twitter-square"></i></a>
-				<a href="https://www.facebook.com/" class="btn btn-round btn-clear btn-facebook" target="_blank"><i class="fa fa-facebook-square"></i></a>
-				<a href="https://www.instagram.com/" class="btn btn-round btn-clear btn-instagram" target="_blank"><i class="fa fa-instagram"></i></a>
-				<a href="https://www.linkedin.com/" class="btn btn-round btn-clear btn-linkedin" target="_blank"><i class="fa fa-linkedin-square"></i></a>
-				<a href="https://www.pinterest.com/" class="btn btn-round btn-clear btn-pinterest" target="_blank"><i class="fa fa-pinterest-square"></i></a>
- 				<a href="https://www.google.com/" class="btn btn-round btn-clear btn-google" target="_blank"><i class="fa fa-google-plus-square"></i></a>
-				<a href="https://www.google.com/" class="btn btn-round btn-clear btn-google" target="_blank"><i class="fa fa-tumblr-square"></i></a>
-				<a href="https://www.google.com/" class="btn btn-round btn-clear btn-google" target="_blank"><i class="fa fa-flickr"></i></a>		                    
+				<a href="https://www.facebook.com/detlefhauke" class="btn btn-round btn-clear btn-facebook" target="_blank"><i class="fa fa-facebook-square"></i></a>
+				<a href="https://www.instagram.com/detlefhauke" class="btn btn-round btn-clear btn-instagram" target="_blank"><i class="fa fa-instagram"></i></a>
+				<a href="https://www.linkedin.com/in/detlefhauke" class="btn btn-round btn-clear btn-linkedin" target="_blank"><i class="fa fa-linkedin-square"></i></a>
+				<a href="https://www.pinterest.com/detlefhauke" class="btn btn-round btn-clear btn-pinterest" target="_blank"><i class="fa fa-pinterest-square"></i></a>
+ 				<a href="https://plus.google.com/+DetlefHauke" class="btn btn-round btn-clear btn-google" target="_blank"><i class="fa fa-google-plus-square"></i></a>
+				<a href="http://detlef.hauke.net/" class="btn btn-round btn-clear btn-google" target="_blank"><i class="fa fa-tumblr-square"></i></a>
+				<a href="https://www.flickr.com/photos/detlef_hauke" class="btn btn-round btn-clear btn-google" target="_blank"><i class="fa fa-flickr"></i></a>		                    
 
 			</div><br>
                 			<a href="#page-profile"><i class="fa fa-angle-down fa-4x" style="color:#ffffff;"></i></a>
@@ -197,8 +196,8 @@
 			<div class="col-md-6">
 				<article class="education">
 					<header>
-						<h3>School of the Art Institute of Chicago</h3>
-						<p>Mikroelektronik - <strong>Graduated:</strong> 2004</p>
+						<h3>School #1</h3>
+						<p>XYZ - <strong>Graduated:</strong> 2004</p>
 					</header>
 						<p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
 				</article>
@@ -206,8 +205,8 @@
 			<div class="col-md-6">
 				<article class="education">
 					<header>
-						<h3>Rhode Island School of Design</h3>
-						<p>Associates of Fine Arts  - <strong>Graduated:</strong> 2002</p>
+						<h3>School #2</h3>
+						<p>XYZ  - <strong>Graduated:</strong> 2002</p>
 					</header>
 						<p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
 				</article>
@@ -234,8 +233,8 @@
 			<div class="col-md-4">
 				<article class="experience">
 					<header>
-						<h3>Dropbox</h3>
-						<p>Design Lead / San Francisco, CA / 2013 - Current</p>
+						<h3>Company 1</h3>
+						<p>Lorem ipsum dolor ...</p>
 					</header>
 						<p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
 				</article>
@@ -243,8 +242,8 @@
 			<div class="col-md-4">
 				<article class="experience">
 					<header>
-						<h3>Instagram</h3>
-						<p>Visual Designer / San Francisco, CA / 2010 - 2013</p>
+						<h3>Company 2</h3>
+						<p>Lorem ipsum dolor ...</p>
 					</header>
 						<p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
 				</article>
@@ -252,8 +251,8 @@
 			<div class="col-md-4">
 				<article class="experience">
 					<header>
-						<h3>Facebook</h3>
-						<p>Product Designer / San Francisco, CA / 2005 - 2010</p>
+						<h3>Company 3</h3>
+						<p>Lorem ipsum dolor ...</p>
 					</header>
 						<p>Lorem ipsum dolor sit amet, ut pri munere perfecto sadipscing, nam habeo legere disputationi ea. Vis nostrud intellegat eu, in vix erat abhorreant accommodare. Vix id elit albucius suavitate. Eos mentitum forensibus et. Vix et quidam moderatius, cu vim quem tibique constituam.</p>
 				</article>
