--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Detlef Hauke</title>
+	<title>Detlef Hauke - Senior Consultant </title>
 	<meta name="description" content="My name is Detlef Hauke and I&#x27;m a Senior advisor, who&#x27;s working with computers since 1985. Read more on my website" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="author" content="Detlef Hauke">
