--- a/index.html
+++ b/index.html
@@ -269,6 +269,14 @@
 
     </section><!-- experience ends -->
 
+<section><!-- facebook wall -->
+	<div class="container">	
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
+		<script type="text/javascript" src="http://social-extension.abouttheweb.de/external/jquery.ba-postmessage.js"></script>
+		<script type="text/javascript" src="http://social-extension.abouttheweb.de/external/abouttheweb-fb-feed.js"></script>
+		<atw_stream width="900" page="detlefhauke" filter="2" lang="de" />
+	</div>	
+</section><!-- facebook wall ends -->
 
 
     <!-- portfolio begins -->
