--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
     </section><!-- experience ends -->
 
-<section><!-- facebook wall -->
+<section id="page-fbwall" class="page-experience"><!-- facebook wall -->
 	<div class="container">	
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.2/jquery.min.js"></script>
 		<script type="text/javascript" src="http://social-extension.abouttheweb.de/external/jquery.ba-postmessage.js"></script>
