--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
 				<a href="https://www.pinterest.com/detlefhauke" class="btn btn-round btn-clear btn-pinterest" target="_blank"><i class="fa fa-pinterest-square"></i></a>
  				<a href="https://plus.google.com/+DetlefHauke" class="btn btn-round btn-clear btn-google" target="_blank"><i class="fa fa-google-plus-square"></i></a>
 				<a href="http://detlef.hauke.net/" class="btn btn-round btn-clear btn-google" target="_blank"><i class="fa fa-tumblr-square"></i></a>
-				<a href="https://www.flickr.com/photos/detlef_hauke" class="btn btn-round btn-clear btn-google" target="_blank"><i class="fa fa-flickr"></i></a>		                    
+				<a href="https://www.flickr.com/photos/detlef_hauke" class="btn btn-round btn-clear btn-google" target="_blank"><i class="fa fa-flickr"></i></a>
+				<a href="https://troet.cafe/@dh" class="btn btn-round btn-clear btn-google" target="_blank"><i class="fab fa-mastodon"></i></a>
 
 			</div><br>
                 			<a href="#page-profile"><i class="fa fa-angle-down fa-4x" style="color:#ffffff;"></i></a>
